0.92 - Using JavaAgent as a way to patch Java and not via patching the actual class file.